--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-images-uploading": "^3.1.7",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.1",
+    "react-spinners": "^0.14.1",
     "read-more-react": "^1.0.10",
     "stream": "^0.0.3",
     "util": "^0.12.5"
